--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/04.任务四：模块作业/2021-05-28-lagou-java-01-01-04.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/04.任务四：模块作业/2021-05-28-lagou-java-01-01-04.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "模块作业+直播答疑回放"
-date:   2021-05-30
+title:  "模块作业+答疑"
+date:   2021-05-28
 categories: lagou
 tags: lagou
 ---
@@ -12,9 +12,9 @@ tags: lagou
 
 1. 第一阶段、开源框架源码解析
 2. 模块一、持久层框架设计及MyBatis源码分析
-3. 任务四、模块作业+直播答疑回放
+3. 任务四、模块作业+答疑
 
-# 任务4、模块作业+直播答疑回放
+# 任务4、模块作业+答疑
 
 ## 作业
 ### 一、简答题
@@ -28,7 +28,7 @@ tags: lagou
 ### 二、编程题
 请完善自定义持久层框架IPersistence，在现有代码基础上添加、修改及删除功能。【需要采用getMapper方式】
 
-
+## 答疑
 
 
 
