--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
@@ -142,9 +142,9 @@ sqlSession.close();
 ```
 
 #### 3.1.3 MyBatis的增删改查操作
-1.编写UserMapper映射文件:略
-2.编写插入实体User的代码:略
-**3.插入操作注意问题**  
+1.编写UserMapper映射文件:略  
+2.编写插入实体User的代码:略  
+**3.插入操作注意问题**   
 >插入语句使用insert标签  
 >在映射文件中使用parameterType属性指定要插入的数据类型  
 >Sql语句中使用#{实体属性名}方式引用实体中的属性值  
@@ -667,7 +667,7 @@ public class PerpetualCache implements Cache {
 ```
 一般下执行完commit操作都需要刷新缓存，flushCache=true表示刷新缓存，这样可以避免数据库脏读。所以我们不用设置，默认即可
 
-## 7.3 二级缓存整合redis
+### 7.3 二级缓存整合redis
 mybatis提供了一个eache接口，如果要实现自己的缓存逻辑，实现cache接口开发即可。mybatis本身默认实现了一个，但是这个缓存的实现无法实现分布式缓存，所以我们要自己来实现。redis分布式缓存就可以，mybatis提供了一个针对cache接口的redis实现类，该类存在mybatis-redis包中
 
 **1.pom文件**
