第二阶段第二模块笔记

--- a/_posts/07.lagou/02.第二阶段-Web服务器深度应用及调优/02.模块二 Cluster模式潜在问题及解决方案、Web服务综合解决方案/01.任务一：一致性Hash问题及解决方案/2021-06-10-lagou-java-02-02-01.md
+++ b/_posts/07.lagou/02.第二阶段-Web服务器深度应用及调优/02.模块二 Cluster模式潜在问题及解决方案、Web服务综合解决方案/01.任务一：一致性Hash问题及解决方案/2021-06-10-lagou-java-02-02-01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Tomcat高级使用及其原理剖析、分布式集群时钟同步问题及解决方案、分布式ID问题及解决方案"
+title:  "一致性Hash问题及解决方案、分布式集群时钟同步问题及解决方案、分布式ID问题及解决方案"
 date:   2021-06-10
 categories: lagou
 tags: lagou
@@ -12,7 +12,7 @@ tags: lagou
 
 1. 第二阶段、Web服务器深度应用及调优
 2. 第二模块、Cluster模式潜在问题及解决方案、Web服务综合解决方案
-3. 任务1、Tomcat高级使用及其原理剖析
+3. 任务1、一致性Hash问题及解决方案
 4. 任务2、分布式集群时钟同步问题及解决方案
 5. 任务3、分布式ID问题及解决方案
   
